--- a/PyCode/PyCal.ipynb
+++ b/PyCode/PyCal.ipynb
@@ -20,8 +20,12 @@
    "source": [
     "#######SCIENTIFIC CALCULATORS########\n",
     "####### PACKAGES ####################\n",
-    "import numpy as np \n",
-    "import pandas as pd"
+    "from tkinter import *\n",
+    "from easygui import ccbox\n",
+    "import tkinter.font as tk_Font\n",
+    "from tkinter import messagebox\n",
+    "from math import *\n",
+    "from functions import *"
    ]
   },
   {
@@ -30,13 +34,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A number raised to itself\n",
-    "def raisedtosame(x):\n",
-    "    if x>0:\n",
-    "        x=x**x\n",
-    "        print('answer is',x)\n",
-    "    else:\n",
-    "        print('Invalid input')"
+    "# ___________Messages_______________________\n",
+    "dia_message = ''' PyCal is created to simplify the calculations, \n",
+    "                        which normal calculators don't help with ...\n",
+    "                                                     \n",
+    "\n",
+    "\n",
+    "                                                             -SVNIT    '''"
    ]
   },
   {
@@ -45,11 +49,154 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Square of number\n",
-    "def squares(x):\n",
-    "    x=x*x\n",
-    "    print('answer is:',x)\n",
-    "    return x"
+    "##### main window with permission of ccbox #### \n",
+    "\n",
+    "if ccbox(dia_message, \"Pycal\"):     # show a Continue/Cancel dialog\n",
+    "    class Application(Frame):\n",
+    "        \"\"\" Main class for calculator\"\"\"\n",
+    "\n",
+    "        def __init__(self, master):\n",
+    "            \"\"\" Initialise the Frame. \"\"\"\n",
+    "            super().__init__()    # @@@@@@@@@@@@@\n",
+    "            self.task=\"\"\n",
+    "            self.UserIn=StringVar()\n",
+    "            self.grid()\n",
+    "            self.create_widgets()\n",
+    "\n",
+    "        def create_widgets(self):\n",
+    "            \"\"\" Create all the buttons for calculator. \"\"\"\n",
+    "        # User input stored as an Entry widget.\n",
+    "            \n",
+    "            # GCD of 2 numbers\n",
+    "            self.button1 = Button(self,bg=\"#fffff0\",fg='#313f4f',activebackground='#313f4f',activeforeground='#fffff0',bd=12,text=\"gcd()\", font = \n",
+    "            (\"Helvetica\", 20, \"bold\"),cursor='pencil', command = lambda : self.buttonClick('gcd(,)'))\n",
+    "            self.button1.grid(row = 2, column = 0, sticky = W+E)\n",
+    "            \n",
+    "            # Sum of squares bw any 2 numbers\n",
+    "            self.button2 = Button(self, bg=\"#fffff0\",fg='#800000',activebackground='#800000',activeforeground='#fffff0',bd = 12, text = \n",
+    "            \"\\u2211x\\u00b2\", command = lambda : self.buttonClick('sum_squares(,)'), cursor='pencil',font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.button2.grid(row = 2, column = 1)\n",
+    "\n",
+    "            # Button for value 9\n",
+    "            self.button3 = Button(self ,bg=\"#00ffff\",fg='#000000' ,activebackground='#fffff0',activeforeground='#00ffff', bd = 12, text = \"9\",command = \n",
+    "            lambda : self.buttonClick(9),cursor='pencil', font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.button3.grid(row = 2, column = 2, sticky = W)\n",
+    "\n",
+    "            # step_function\n",
+    "            self.button4 = Button(self, bg=\"#fffff0\",fg='#313f4f',activebackground='#313f4f',activeforeground='#fffff0', bd = 12,text = \"[x]\",command \n",
+    "            = lambda : self.buttonClick('floor()'), cursor='pencil',font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.button4.grid(row = 3, column = 0, sticky = W+E)\n",
+    "\n",
+    "            # Sum of cubes bw any 3 numbers\n",
+    "            self.button5 = Button(self, bg=\"#fffff0\",fg='#800000',activebackground='#800000',activeforeground='#fffff0', bd = 12, text = \n",
+    "            \"\\u2211x\\u00b3\",command = lambda : self.buttonClick('sum_cubes()'),cursor='pencil', font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.button5.grid(row = 3, column = 1, sticky = W)\n",
+    "\n",
+    "            # Button for value 6\n",
+    "            self.button6 = Button(self, bg=\"#fffff0\",fg='#800000',activebackground='#800000',activeforeground='#fffff0', bd = 12, text = \n",
+    "            \"6\",cursor='pencil',command = lambda : self.buttonClick(6), font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.button6.grid(row = 3, column = 2, sticky = W+E)\n",
+    "\n",
+    "            # factorial\n",
+    "            self.button7 = Button(self,bg=\"#fffff0\",fg='#313f4f',activebackground='#313f4f',activeforeground='#fffff0', bd = 12, text = \"x!\", \n",
+    "            cursor='pencil',command = lambda : self.buttonClick('factorial()'), font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.button7.grid(row = 4, column = 0, sticky = W+E)\n",
+    "\n",
+    "            # Button for value 2\n",
+    "            self.button8 = Button(self, bg=\"#fffff0\",fg='#800000',activebackground='#800000',activeforeground='#fffff0',bd = 12, text = \n",
+    "            \"2\",cursor='pencil',command = lambda : self.buttonClick(2), font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.button8.grid(row = 4, column = 1, sticky = W+E)\n",
+    "\n",
+    "            # Button for value 3\n",
+    "            self.button9 = Button(self, bg=\"#07d6f1\",fg='#000000',activebackground='#fffff0',activeforeground='#00ffff', bd = 12, text = \"3\",command = lambda : self.buttonClick(3), cursor='pencil',font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.button9.grid(row = 4, column = 2, sticky = W)\n",
+    "\n",
+    "            # log of random base\n",
+    "            self.button9 = Button(self, bg=\"#fffff0\",fg='#313f4f',activebackground='#313f4f',activeforeground='#fffff0', bd = 12, text = \"log(num,base)\",command = lambda : self.buttonClick('log(,)'), font = (\"Helvetica\", 12, \"bold\"))\n",
+    "            self.button9.grid(row = 5, column = 0, sticky = W)\n",
+    "\n",
+    "            # Exponent buttons\n",
+    "            # Square Value\n",
+    "            self.Addbutton = Button(self, bg=\"#fffff0\",fg='#f3bb1d',activebackground='#f3bb1d',activeforeground='#fffff0', bd = 12, text = \"x\\u00b2\",\n",
+    "            command = lambda : self.buttonClick(\"()**2\"), font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.Addbutton.grid(row = 2, column = 3, sticky = W+E)\n",
+    "\n",
+    "            # Power of a given number\n",
+    "            self.Subbutton = Button(self, bg=\"#fffff0\",fg='#f3bb1d',activebackground='#f3bb1d',activeforeground='#fffff0', bd = 12, \n",
+    "            text = \"pow\",\n",
+    "            command = lambda : self.buttonClick(\"pow(,)\"), font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.Subbutton.grid(row = 3, column = 3, sticky = W+E)\n",
+    "\n",
+    "            # π/pi button\n",
+    "            self.Multbutton = Button(self, bg=\"#fffff0\",fg='#f3bb1d',activebackground='#f3bb1d',activeforeground='#fffff0',bd = 12, text = \"π\",\n",
+    "            command = lambda : self.buttonClick(\"pi\"), font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.Multbutton.grid(row = 4, column = 3, sticky = W+E)\n",
+    "\n",
+    "            # conv_degrees button\n",
+    "            self.Divbutton = Button(self, bg=\"#ffffff\",fg='#800000',activebackground='#800000',activeforeground='#ffffff',bd=7, text = \"\\u00b0\",\n",
+    "            command = lambda : self.buttonClick(\"degrees()\"), font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.Divbutton.grid(row = 5, column = 3, sticky = W)\n",
+    "            \n",
+    "            # conv_radians button\n",
+    "            self.Divbutton = Button(self, bg=\"#ffffff\",fg='#800000',activebackground='#800000',activeforeground='#ffffff',bd=7,text = \"c\",\n",
+    "            command = lambda : self.buttonClick(\"radians()\"), font = (\"Helvetica\", 20, \"bold\"))\n",
+    "            self.Divbutton.grid(row = 5, column = 3, sticky = E)\n",
+    "\n",
+    "            # Equal button\n",
+    "            self.Equalbutton = Button(self,bg=\"#18e111\",fg='#fffff0',activebackground='#fffff0',activeforeground='#18e111', bd = 12, text = \"=\",\n",
+    "            command = self.CalculateTask, font = (\"Helvetica\", 20, \"bold\"),width=14, padx=7)\n",
+    "            self.Equalbutton.grid(row = 1,sticky = E, columnspan = 4)\n",
+    "\n",
+    "            # Clear Button\n",
+    "            self.Clearbutton = Button(self,bg=\"#18e111\",fg='#fffff0',activebackground='#fffff0',activeforeground='#18e111', bd = 12,text = \"AC\",  \n",
+    "            font = (\"Helvetica\", 20, \"bold\"), width = 12, padx = 7,cursor='pencil', command = self.ClearDisplay)\n",
+    "            self.Clearbutton.grid(row = 1, columnspan = 4, sticky = W)\n",
+    "            \n",
+    "            # Input ..\n",
+    "            self.user_input=Entry(cursor='pencil',bg='#fffff0',fg=\"#18e111\",bd=12, insertwidth=4,font=(\"Verdana\", \n",
+    "            20,\"italic\"),textvariable=self.UserIn,justify=RIGHT)    \n",
+    "            self.user_input.grid(row=6, sticky=E+W)\n",
+    "            self.user_input.insert(0, \"Input...\")\n",
+    "            \n",
+    "            # Help button\n",
+    "            #self.help = Button(self, text=\"\\u23ff\", command=self.show_help)\n",
+    "            #self.help.grid(row=5,column=0, sticky=W+S)\n",
+    "        def show_help():\n",
+    "            self.show = open('help.txt', 'r')\n",
+    "            print(show)   \n",
+    "        def buttonClick(self, string_input):     # @@@@@@@@@@@@@@@@@@@@@@@@\n",
+    "            self.task = str(self.task) + string_input\n",
+    "            self.UserIn.set(self.task)\n",
+    "            self.task = ''\n",
+    "        def CalculateTask(self):\n",
+    "            self.data = self.user_input.get()\n",
+    "            try:\n",
+    "                self.answer = eval(self.data)\n",
+    "                self.displayText(self.answer)\n",
+    "                self.task = self.answer\n",
+    "\n",
+    "            except SyntaxError as e:\n",
+    "                self.displayText(\"Invalid Syntax!\")\n",
+    "                self.task = \"\"\n",
+    "\n",
+    "        def displayText(self, value):\n",
+    "            self.user_input.delete(0, END)\n",
+    "            self.user_input.insert(0, value)\n",
+    "\n",
+    "        def ClearDisplay(self):\n",
+    "            self.task = \"\"\n",
+    "            self.user_input.delete(0, END)\n",
+    "            self.user_input.insert(0, \"Input ...\")\n",
+    "\n",
+    "\n",
+    "    calculator = Tk()\n",
+    "    calculator.title(\"PyCal\")\n",
+    "    calculator.config(background='green')\n",
+    "    app = Application(calculator)\n",
+    "    calculator.resizable(width = False, height = False) # Make window fixed (cannot be resized)\n",
+    "    \n",
+    "\n",
+    "    calculator.mainloop()    "
    ]
   },
   {
@@ -58,11 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cube_sum\n",
-    "def sum_cubes(x):\n",
-    "    x=x*x*(x+1)*(x+1)/4\n",
-    "    print('in sum_cubes(x):z=',x)\n",
-    "    return x"
+    "else:  # user chooses Cancel\n",
+    "    sys.exit(0)\n"
    ]
   },
   {
@@ -70,149 +214,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Square_sum\n",
-    "def sum_squares(n):\n",
-    "    n=n*(n+1)*(2*n+1)/6\n",
-    "    print('for sum of cubes:S(n)=',n)\n",
-    "    return n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Natural_number\n",
-    "def sum_linear(n):\n",
-    "    n=n*(n+1)/2\n",
-    "    print('for sum of natural numbers:S(n)=',n)\n",
-    "    return(n)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# sin and cos :)\n",
-    "def sin(x):\n",
-    "    \"\"\"let user input value of x in degrees and not in radians\"\"\"\n",
-    "    pi=3.14\n",
-    "    x=x*pi/180\n",
-    "    return np.sin(x)\n",
-    "def cos(x):\n",
-    "    \"\"\"value of angle only in degrees\"\"\"\n",
-    "    pi=3.14\n",
-    "    x=x*pi/180\n",
-    "    return np.cos(x) "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Body_algebric       ### ###### #########\n",
-    "option=str(input('press a for algebric calculator and t for trigonometric calculator:\\n'))\n",
-    "if option=='a':\n",
-    "    print('1]Press (1)for addition')\n",
-    "    print('2]Press(2)for subtraction')    \n",
-    "    print('3]Press(3)for multiplication')\n",
-    "    print('4]Press(4)for division')\n",
-    "    print('5]Press(5)for sum of cubes')\n",
-    "    print('6]Press(6)for sum of squares')\n",
-    "    print('7]Press(7)for sum of natural numbers')\n",
-    "    print('8]Press(8)for cube root of any number')\n",
-    "    print('9]Press(9)for square root of any number')\n",
-    "    print('1o]Press(10)for square of any number')  \n",
-    "    print('11]Press(11)for a number raised to itself')\n",
-    "    x=int(input('Please enter your choice:\\n'))\n",
-    "    if x==1:\n",
-    "        print('enter the values of a and b')\n",
-    "        a=int(input('what is a?'))\n",
-    "        b=int(input('what is b?'))\n",
-    "        sum=a+b\n",
-    "        print(sum)\n",
-    "    if x==3:\n",
-    "        print('enter the values of a and b')\n",
-    "        a=int(input('what is a?'))\n",
-    "        b=int(input('what is b?'))\n",
-    "        multiply=a*b\n",
-    "        print(multiply)\n",
-    "    if x==2:\n",
-    "        print('enter the values of a and b')\n",
-    "        a=int(input('what is a?'))\n",
-    "        b=int(input('what is b?'))\n",
-    "        sub=a-b\n",
-    "        print(sub)\n",
-    "    if x==4:\n",
-    "        print('enter the values of a and b')\n",
-    "        a=int(input('what is a?'))\n",
-    "        b=int(input('what is b?'))\n",
-    "        div=a/b\n",
-    "        print(div)\n",
-    "    if x==5:\n",
-    "      y=int(input('Enter the value of y:\\n'))\n",
-    "      sum_cubes(y)\n",
-    "    if x==6:\n",
-    "      y=int(input('Enter the value of y:\\n'))\n",
-    "      sum_squares(y)\n",
-    "    if x==7:\n",
-    "       y=int(input('Enter the value of y:\\n'))\n",
-    "       sum_linear(y)\n",
-    "    if x==8:\n",
-    "        n=int(input(\"enter the value of n:\\n\"))\n",
-    "        x=0\n",
-    "        if n>0:\n",
-    "        while x**3<n:\n",
-    "          x=x+0.01\n",
-    "        print(x)    \n",
-    "        if n<0:\n",
-    "            s=-1*n\n",
-    "            while x**3<s:\n",
-    "            x=x+0.01\n",
-    "            print(-1*x)\n",
-    "    if x==9:\n",
-    "        n=int(input(\"enter the value of n:\\n\"))\n",
-    "        x=0\n",
-    "        while x**2<n:\n",
-    "            x=x+0.01\n",
-    "        print(x)    \n",
-    "    if x==10:\n",
-    "        sq=float(input('Enter the value of any number:'))\n",
-    "        squares(sq)\n",
-    "        print(squares(sq))\n",
-    "    if x==11:\n",
-    "        rise=float(input('Enter value of the number for which you choose this operation:'))\n",
-    "        raisedtosame(rise)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Body_trigonometric\n",
-    "if option=='t':\n",
-    "    print(\"Press 1a] for sine function\")\n",
-    "    print(\"Press 2a]for cosine function\") \n",
-    "    z=str(input('Please enter your choice:\\n'))\n",
-    "    if z=='1a':\n",
-    "        alpha=float(input('Enter the value of angle in degrees only,please'))\n",
-    "        sin(alpha)\n",
-    "        print(sin(alpha))\n",
-    "    if z=='2a':\n",
-    "        beta=float(input('Enter the value of angle in degrees only,please:'))\n",
-    "        cos(beta)\n",
-    "        print(cos(beta))\n",
-    "print('\\n')        \n",
-    "print('THANKS A LOT!!!')      \n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -231,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
